# python-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
